removing options tray max width, renders correctly on mobile

--- a/app/stylesheets/body/options-tray/_options-tray.scss
+++ b/app/stylesheets/body/options-tray/_options-tray.scss
@@ -5,7 +5,6 @@
   @include transition(0.2s);
 
   width: 0;
-  max-width: $options_tray_max_width;
 
   background-color: $tray_background_color;
   color: $font_color;
